saas/web/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: nginx
        image: heiffigjr/frontend-app:ecf6c172b7c91068cd67b96ea5830f2251634495
        ports:
        - containerPort: 80
